fix cart button text clipping. resolves #9

--- a/app/stylesheets/sass/partials/b-cart.sass
+++ b/app/stylesheets/sass/partials/b-cart.sass
@@ -92,6 +92,7 @@
         .b-cart__action__submit
           width: 100%
           margin-left: 0
+          white-space: pre-line
         @include grid-media-query("palm")
           margin-left: 0
 
